--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,7 @@ html[data-theme="dark"] body::before {
   height: 120px;
   width: 120px;
   flex-shrink: 0;
+  margin-top: 6px;
 }
 
 .brand-mark-img {
